# bambumonitor

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  pubsub.py  state.py
backend/app/api/: control.py  deps.py  filament.py  health.py  jobs.py  prints.py  settings.py  state.py  stats.py  ws.py
backend/app/db/: models.py  session.py
backend/app/mqtt/: client.py  parser.py  worker.py
backend/app/services/: env_writer.py  filament.py  print_tracker.py  printer_command.py  printer_files.py  stats.py  system_actions.py  telemetry.py  threemf.py  ustreamer_dropin.py
backend/app/utils/: logging.py  time.py
backend/tests/: conftest.py  test_env_writer.py  test_parser.py  test_settings_api.py  test_state.py  test_stats.py  test_threemf.py  test_ustreamer_dropin.py
deploy/nginx/: bambu-monitor.conf
deploy/scripts/: build_frontend.sh  install_services.sh  setup.sh  update.sh
deploy/sudoers/: bambu-monitor
deploy/systemd/: bambu-monitor.service  ustreamer.service
deploy/systemd/ustreamer.service.d/: override.conf.example
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MQTT_NOTES.md
frontend/: .env.example  components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/dashboard/: ChamberLightTile.tsx  FailedCard.tsx  FilamentTile.tsx  IdleCard.tsx  KpiTile.tsx  MiniTempChart.tsx  PrinterScene.tsx  RunningCard.tsx  SpeedTile.tsx  StatusBadge.tsx  TempCard.tsx  ThermoTile.tsx  WebcamPanel.tsx
frontend/src/hooks/: useControl.ts  useFilament.ts  useJobs.ts  useLivePrinterState.ts  usePrintDetail.ts  usePrints.ts  useStats.ts
frontend/src/lib/: api.ts  filamentColors.ts  format.ts  mockApi.ts  sse.ts  ws.ts
frontend/src/routes/: Dashboard.tsx  PrintDetail.tsx  PrintHistory.tsx  SendPrint.tsx  Settings.tsx  Stats.tsx
frontend/src/store/: preferences.ts  printerStore.ts  themeStore.ts
frontend/src/types/: api.ts  jobs.ts
(+25 files in other folders)
