[project]
name = "bambu-monitor"
version = "0.1.0"
description = "Self-hosted dashboard backend for the Bambu Lab A1 3D printer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "paho-mqtt>=2.1",
  "sqlmodel>=0.0.22",
  "aiosqlite>=0.20",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "ruff>=0.7",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",   # line length handled by formatter
  "B008",   # FastAPI Depends() in defaults is the standard pattern
  "SIM105", # try/except/pass is more readable than contextlib.suppress here
  "RUF046", # cosmetic; we keep int(round(...)) for explicit intent
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["paho.mqtt.*"]
ignore_missing_imports = true

# SQLModel + SQLAlchemy column expressions don't play well with --strict.
# We relax type checks for the data-access layer; the rest stays strict.
[[tool.mypy.overrides]]
module = [
  "app.api.prints",
  "app.api.stats",
  "app.api.filament",
  "app.api.ws",
  "app.api.deps",
  "app.db.session",
  "app.db.models",
  "app.services.print_tracker",
  "app.services.telemetry",
  "app.services.stats",
  "app.services.filament",
]
disable_error_code = [
  "arg-type",
  "attr-defined",
  "union-attr",
  "call-overload",
  "assignment",
  "no-any-return",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
